2005-03-23  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_field_initializer): Don't build a COMPONENT_REF.

2005-03-23  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_try): Annotate statement.

2005-03-23  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_new_array): Handle array initializers properly.
	(visit_array_initializer): Create new array here.
	(build_new_object_array): Lay out array class.  Use
	build_class_reference.

2005-03-23  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_catch): Prepare catch type.

2005-03-23  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_method_call): Don't use virtual dispatch for
	private methods.
	(get_vtable_index): Return -1 for private methods.

2005-03-23  Tom Tromey  <tromey@redhat.com>

	* abi.cc (build_method_call): Handle interface invocation.
	* hooks.hh (builtin_Jv_LookupInterfaceMethod): Declare.
	* decl.cc (builtin_Jv_LookupInterfaceMethod): New global.
	(initialize_builtin_functions): Initialize it.

2005-03-23  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (map_method): Strip abstract methods.

2005-03-23  Tom Tromey  <tromey@redhat.com>

	* builtins.cc (lay_out_class): Lay out interfaces.

2005-03-03  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_while): Annotate the loop, not the statements.

	* tree.cc (wrap_synchronized): Use save_expr, not a temporary
	variable.

	* tree.cc (build_new_array): Cast result to correct type.
	(build_class_ref): Return result.

	* tree.cc (find_field): Rewrote.

	* lower.cc (visit_bytecode_block): Updated.
	* tree.hh (tree_generator::find_field): Declare.
	(tree_generator::build_class_ref): Updated.
	(tree_generator::build_new_array): Updated.
	* tree.cc (find_field): New method.
	(build_class_ref): Handle primitive classes.  Added 'request'
	argument.
	(visit_method): Updated.
	(visit_class_ref): Updated.
	(visit_instanceof): Updated.
	(build_new_array): Updated.  Added 'request' argument.
	(visit_new_array): Updated.
